--- a/index.html
+++ b/index.html
@@ -2117,24 +2117,55 @@
       URL.revokeObjectURL(url);
     }
 
-    function downloadProfilePdf(payload) {
-      const element = $("pdfWrapper");
-      const employeeId =
-        (payload.candidate.employeeId || "candidate")
-          .replace(/[^a-zA-Z0-9_-]/g, "_");
+		function downloadProfilePdf(payload) {
+		  const original = document.getElementById("pdfWrapper");
+		
+		  // Tạo bản clone để export (tránh export trực tiếp trong modal fixed)
+		  const cloneContainer = document.createElement("div");
+		  cloneContainer.style.background = "#ffffff";
+		  cloneContainer.style.padding = "10px";
+		  cloneContainer.style.margin = "0";
+		  cloneContainer.style.position = "static";
+		  cloneContainer.style.width = "800px";  // ~A4
+		  cloneContainer.style.maxWidth = "100%";
+		
+		  const clone = original.cloneNode(true);
+		  clone.id = "pdfWrapperExport";
+		  clone.style.boxShadow = "none";
+		  clone.style.border = "none";
+		  clone.style.margin = "0";
+		
+		  cloneContainer.appendChild(clone);
+		  document.body.appendChild(cloneContainer);
+		
+		  const employeeId =
+		    (payload.candidate.employeeId || "candidate").replace(/[^a-zA-Z0-9_-]/g, "_");
+		
+		  const opt = {
+		    margin: [10, 10, 10, 10],
+		    filename: "candidate_profile_" + employeeId + ".pdf",
+		    image: { type: "jpeg", quality: 0.98 },
+		    html2canvas: { scale: 2, useCORS: true },
+		    jsPDF: { unit: "mm", format: "a4", orientation: "portrait" },
+		    pagebreak: { mode: ["css", "legacy"] }
+		  };
+		
+		  // Đợi 1 tick cho browser layout xong rồi mới chụp
+		  setTimeout(() => {
+		    html2pdf()
+		      .set(opt)
+		      .from(cloneContainer)
+		      .save()
+		      .then(() => {
+		        document.body.removeChild(cloneContainer);
+		      })
+		      .catch(() => {
+		        document.body.removeChild(cloneContainer);
+		      });
+		  }, 0);
+		}
 
-      const opt = {
-        margin: [10, 10, 10, 10],
-        filename: "candidate_profile_" + employeeId + ".pdf",
-        image: { type: "jpeg", quality: 0.98 },
-        html2canvas: { scale: 2, useCORS: true },
-        jsPDF: { unit: "mm", format: "a4", orientation: "portrait" },
-        pagebreak: { mode: ["css", "legacy"] }
-      };
 
-      // Ensure modal (and pdfWrapper) are visible
-      html2pdf().set(opt).from(element).save();
-    }
 
     // ===============================
     // MAIN INIT
