--- a/index.html
+++ b/index.html
@@ -703,7 +703,7 @@
     <div class="card">
       <div class="header-main">
         <div class="header-left">
-          <img src="/logo.png" alt="Ashley Logo" class="header-logo">
+          <img src="assets/logo.png" alt="Ashley Logo" class="header-logo">
           <div>
             <div class="title">Talent Uplift – Candidate Profile</div>
             <div class="subtitle">
