--- a/index.html
+++ b/index.html
@@ -1771,7 +1771,7 @@ function findRoleIdByTitle(title) {
       $("pref1Reason").value =
         "I aim to grow into a project leadership role where I can coordinate cross-functional work, manage timelines, and deliver impactful engineering outcomes for both factory and commercial teams.";
 
-      $("pref2Role").value = findRoleIdByTitle("Manager of Strategy Execution");
+      $("pref2Role").value = findRoleIdByTitle("Team Leader of Solutions Development");
       $("pref2Reason").value =
         "I am also interested in Strategy Execution because it connects data, projects and business priorities. This role would allow me to work across departments and drive initiatives that improve execution discipline.";
 
