--- a/index.html
+++ b/index.html
@@ -1176,13 +1176,13 @@
         <div id="pdfWrapper">
           <div class="pdf-header-bar">
             <div class="pdf-header-left">
-              <div class="pdf-logo-box">Ashley</div>
+              <div class="pdf-logo-box">CVRO</div>
               <div>
                 <div style="font-weight:700;font-size:13px;">
-                  TALENT UPLIFT / SUCCESSOR POOL 2025
+                  CANDIDATE PROFILE SUMMARY
                 </div>
                 <div style="font-size:11px;opacity:0.9;">
-                  Candidate Profile Summary
+                  Talent Uplift Program 2026
                 </div>
               </div>
             </div>
