--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="assets/favicon.png">
 
-
   <!-- PDF export library -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
   <!-- SheetJS for Excel export -->
@@ -56,11 +55,9 @@
 
     .header-main {
       display: flex;
-      justify-content: space-between;
-      align-items: center;
-      margin-bottom: 6px;
-      gap: 12px;
-      flex-wrap: wrap;
+      flex-direction: column;
+      align-items: flex-start;
+      gap: 6px;
     }
 
     .header-left {
@@ -519,13 +516,12 @@
       color: #b45309;
     }
 
-	.pdf-header-right {
-	  display: flex;
-	  align-items: center;      /* canh giữa theo chiều dọc */
-	  justify-content: flex-end;
-	  font-size: 11px;
-	}
-
+    .pdf-header-right {
+      display: flex;
+      align-items: center;
+      justify-content: flex-end;
+      font-size: 11px;
+    }
 
     .pdf-tag {
       padding: 2px 8px;
@@ -566,15 +562,14 @@
       height: 100%;
     }
 
-	.box-header {
-	  display: flex;
-	  align-items: center;
-	  gap: 6px;
-	  margin-bottom: 6px;
-	  font-weight: 700;
-	  color: #1e3a8a; /* navy blue cho các header preview */
-	}
-
+    .box-header {
+      display: flex;
+      align-items: center;
+      gap: 6px;
+      margin-bottom: 6px;
+      font-weight: 700;
+      color: #1e3a8a;
+    }
 
     .box-header span.icon {
       font-size: 14px;
@@ -692,98 +687,169 @@
       text-decoration: underline;
     }
 
+    /* Light Ashley Orange Header – compact version (desktop base) */
+    .header-orange {
+      background: linear-gradient(
+          90deg,
+          rgba(247, 142, 47, 0.14),
+          rgba(247, 142, 47, 0.05)
+        ),
+        #fff7ed;
+      padding: 24px 28px;
+      border-radius: 16px;
+      border: 1px solid #f5d8bd;
+    }
 
-/* Light Ashley Orange Header – compact version */
-.header-orange {
-  background: linear-gradient(
-      90deg,
-      rgba(247, 142, 47, 0.14),
-      rgba(247, 142, 47, 0.05)
-    ),
-    #fff7ed;
-  padding: 24px 28px; /* giảm từ 40px */
-  border-radius: 16px; /* nhỏ hơn để nhìn gọn */
-  border: 1px solid #f5d8bd;
-}
+    .header-logo-big {
+      width: 70px;
+      height: auto;
+      margin-bottom: 6px;
+      display: block;
+    }
 
-/* Logo – rút lại một chút */
-.header-logo-big {
-  width: 70px;   /* trước là 88px */
-  height: auto;
-  margin-bottom: 6px; /* giảm khoảng cách */
-  display: block;
-}
+    .page-title {
+      font-size: 24px;
+      font-weight: 800;
+      color: #b45309;
+      margin: 0;
+    }
 
-/* Layout – giảm khoảng cách giữa các dòng */
-.header-main {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  gap: 6px; /* giảm từ 10px */
-}
+    .program-title {
+      font-size: 14px;
+      font-weight: 700;
+      color: #9a4a0b;
+      margin-top: -2px;
+    }
 
-/* Page title */
-.page-title {
-  font-size: 24px;    /* giảm 28 → 24 */
-  font-weight: 800;
-  color: #b45309;
-  margin: 0;
-}
+    .subtitle {
+      font-size: 13px;
+      color: #5c4a3a;
+      max-width: 100%;
+      line-height: 1.4;
+      margin-top: 2px;
+    }
 
-/* Program name */
-.program-title {
-  font-size: 14px;    /* giảm 16 → 14 */
-  font-weight: 700;
-  color: #9a4a0b;
-  margin-top: -2px;
-}
+    .info-badge {
+      font-size: 11px;
+      font-weight: 600;
+      text-transform: uppercase;
+      letter-spacing: 0.03em;
+      color: #876a54;
+      margin-top: 4px;
+    }
 
-/* Subtitle */
-.subtitle {
-  font-size: 13px;
-  color: #5c4a3a;
-  max-width: 760px;
-  line-height: 1.4;   /* nhỏ hơn 1.45 */
-  margin-top: 2px;
-}
+    /* ========== MOBILE TWEAKS (PHONE) ========== */
+    @media (max-width: 600px) {
+      .page {
+        padding: 0 8px;
+        margin: 12px auto 24px;
+      }
 
-/* Instruction */
-.info-badge {
-  font-size: 11px;
-  font-weight: 600;
-  text-transform: uppercase;
-  letter-spacing: 0.03em;
-  color: #876a54;
-  margin-top: 4px;
-}
+      .card {
+        padding: 14px 12px 16px;
+        margin-bottom: 12px;
+        border-radius: 12px;
+      }
 
+      .section-block {
+        padding: 10px 10px 8px;
+        margin-bottom: 10px;
+      }
+
+      .field {
+        margin-bottom: 6px;
+      }
+
+      .header-orange {
+        padding: 18px 14px;
+        border-radius: 0 0 16px 16px;
+      }
+
+      .header-logo-big {
+        width: 64px;
+        margin-bottom: 4px;
+      }
+
+      .page-title {
+        font-size: 22px;
+      }
+
+      .program-title {
+        font-size: 13px;
+      }
+
+      .subtitle {
+        font-size: 12px;
+      }
+
+      .info-badge {
+        font-size: 10px;
+        letter-spacing: 0.02em;
+      }
+
+      input[type="text"],
+      input[type="email"],
+      select,
+      textarea {
+        font-size: 13px;
+        padding: 9px 10px;
+      }
+
+      .btn-row {
+        flex-direction: column;
+        align-items: stretch;
+      }
+
+      .btn {
+        width: 100%;
+        justify-content: center;
+      }
+
+      #btnReset {
+        order: 2; /* Generate nằm trên, Clear nằm dưới */
+      }
+
+      .checkbox-row,
+      .radio-row {
+        gap: 6px 12px;
+        font-size: 13px;
+      }
+
+      .checkbox-item input,
+      .radio-item input {
+        width: 18px;
+        height: 18px;
+      }
+
+      .modal-dialog {
+        padding: 14px 14px 16px;
+      }
+    }
   </style>
 </head>
 <body>
   <div class="page">
     <!-- HEADER -->
-<div class="card header-orange">
+    <div class="card header-orange">
+      <img src="assets/logo.png" alt="Ashley Logo" class="header-logo-big">
 
-  <!-- BIG LOGO OUTSIDE TITLE -->
-  <img src="assets/logo.png" alt="Ashley Logo" class="header-logo-big">
+      <div class="header-main">
+        <div class="page-title">Candidate Profile Builder</div>
 
-  <div class="header-main">
-    <div class="page-title">Candidate Profile Builder</div>
+        <div class="program-title">CVRO Talent Uplift Program 2026</div>
 
-    <div class="program-title">CVRO Talent Uplift Program 2026</div>
+        <div class="subtitle">
+          Use this page to build and download your Candidate Profile (PDF + Excel)
+          for the CVRO Talent Uplift program. Once ready, please submit your responses
+          through the official Microsoft Forms application.
+        </div>
 
-    <div class="subtitle">
-      Use this page to build and download your Candidate Profile (PDF + Excel)
-      for the CVRO Talent Uplift program. Once ready, please submit your responses
-      through the official Microsoft Forms application.
+        <div class="info-badge">
+          Please complete this page in English. Fields marked (*) are required.
+        </div>
+      </div>
     </div>
 
-    <div class="info-badge">
-      Please complete this page in English. Fields marked (*) are required.
-    </div>
-  </div>
-
-</div>
 
 
     <!-- ========== FORM CARD ========== -->
