test lại pdf header

--- a/index.html
+++ b/index.html
@@ -496,12 +496,23 @@
       color: #fefce8;
     }
 
-    .pdf-header-left {
-      display: flex;
-      align-items: center;
-      gap: 10px;
-      font-size: 13px;
-    }
+.pdf-header-left {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  font-size: 14px; /* base */
+}
+
+.pdf-header-title {
+  font-weight: 700;
+  font-size: 15px;
+}
+
+.pdf-header-subtitle {
+  font-size: 13px;
+  opacity: 0.9;
+}
+
 
     .pdf-logo-box {
       width: 70px;
@@ -1306,12 +1317,12 @@
             <div class="pdf-header-left">
               <div class="pdf-logo-box">CVRO</div>
               <div>
-                <div style="font-weight:700;font-size:13px;">
-                  CANDIDATE PROFILE SUMMARY
-                </div>
-                <div style="font-size:11px;opacity:0.9;">
-                  Talent Uplift Program 2026
-                </div>
+				<div style="font-weight:700;font-size:15px;">
+				  CANDIDATE PROFILE SUMMARY
+				</div>
+				<div style="font-size:13px;opacity:0.9;">
+				  Talent Uplift Program 2026
+				</div>
               </div>
             </div>
 			<div class="pdf-header-right">
